--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -4,3 +4,4 @@ RewriteRule ^service$ /service.html [L]
 RewriteRule ^projects$ /projects.html [L]
 RewriteRule ^join$ /join.html [L]
 RewriteRule ^about$ /about.html [L]
+RewriteRule ^showcase$ /project-showcase.html [L]
